# SmartGatewayPro

./: .gitignore  CMakeLists.txt  README.md  gateway.conf
include/: ConfigReader.hpp  HardwareController.hpp  Logger.hpp  NetworkManager.hpp  TemperatureSensor.hpp
src/: ConfigReader.cpp  HardwareController.cpp  Logger.cpp  NetworkManager.cpp  TemperatureSensor.cpp  main.cpp
